[gd_scene load_steps=8 format=3 uid="uid://cdx63chyerhh0"]

[ext_resource type="Script" path="res://sounds/sound_manager.gd" id="1_a0hyp"]
[ext_resource type="AudioStream" uid="uid://btvfw87cnrjh1" path="res://sounds/menu_music.wav" id="2_hk1gq"]
[ext_resource type="AudioStream" uid="uid://dss6rw0fbqfmy" path="res://sounds/monstadt_level_music.wav" id="3_rwpkm"]
[ext_resource type="AudioStream" uid="uid://jcqmoua44op7" path="res://sounds/cave_level_music.wav" id="4_dgbbe"]
[ext_resource type="AudioStream" uid="uid://bfqg5o1n8djiq" path="res://sounds/jake_punch.wav" id="5_l4arx"]
[ext_resource type="AudioStream" uid="uid://b3i04pau530kw" path="res://sounds/jump.wav" id="6_r1ik2"]
[ext_resource type="AudioStream" uid="uid://4udurlntx11m" path="res://sounds/click.wav" id="7_2w76c"]

[node name="SoundManager" type="Node2D"]
script = ExtResource("1_a0hyp")

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hk1gq")
bus = &"Music"

[node name="MonstadtMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rwpkm")
bus = &"Music"

[node name="CaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dgbbe")
bus = &"Music"

[node name="JakePunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_l4arx")
bus = &"SFX"

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_r1ik2")
bus = &"SFX"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2w76c")
bus = &"SFX"
